Name: reflex-openlayers
Version: 3.12.1
Synopsis: Reflex bindings to OpenLayers
Description: Bindings to the OpenLayers JavaScript library for use with Reflex-DOM
License: BSD3
License-file: LICENSE
Author: Alberto Valverde
Maintainer: alberto@toscat.net
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.10

library
  hs-source-dirs: src
  build-depends:
    base,
    reflex,
    ghcjs-base,
    ghcjs-dom == 0.2.*,
    ghcjs-ffiqq,
    reflex-dom,
    containers,
    ref-tf,
    transformers,
    data-default,
    dependent-sum,
    file-embed,
    lens,
    bytestring
  exposed-modules:
      Reflex.OpenLayers
    , Reflex.OpenLayers.Source
    , Reflex.OpenLayers.Layer
    , Reflex.OpenLayers.Event
    , Reflex.OpenLayers.Util
  ghc-prof-options: -fprof-auto
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  --cpp-options: -DGHCJS_TRACE_WEAK
  js-sources: static/ol.js
  default-language: Haskell2010

executable reflex-openlayers-demo
  hs-source-dirs: exe
  main-is: demo.hs
  build-depends:
    base,
    lens,
    reflex,
    reflex-dom,
    reflex-dom-contrib,
    data-default,
    reflex-openlayers,
    containers,
    transformers,
    safe
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  --cpp-options: -DGHCJS_TRACE_WEAK
