Name: reflex-openlayers
Version: 3.12.2
Synopsis: Reflex bindings to OpenLayers
Description: Bindings to the OpenLayers JavaScript library for use with Reflex-DOM
License: BSD3
License-file: LICENSE
Author: Alberto Valverde
Maintainer: alberto@toscat.net
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.10

flag include-javascript
  description: Include OpenLayers javascript (plays bad with template haskell)
  default: False
  manual: True

flag examples
  description: Build example app
  default: False
  manual: True


library
  if !impl(ghcjs)
    buildable: False
  hs-source-dirs: src
  build-depends:
      base
    , ghcjs-base
    , ghcjs-dom           >= 0.2 && < 0.6
    , ghcjs-ffiqq
    , reflex
    , reflex-dom          >= 0.3
    , reflex-dom-contrib
    , containers
    , ref-tf
    , transformers
    , data-default
    , dependent-sum
    , these
    , lens
    , safe
    , bytestring
    , aeson
    , sigym4-geometry
    , spatial-reference   >= 0.1.0.1
  exposed-modules:
      Reflex.OpenLayers
    , Reflex.OpenLayers.Source
    , Reflex.OpenLayers.Widgets
    , Reflex.OpenLayers.Layer
    , Reflex.OpenLayers.Event
    , Reflex.OpenLayers.Collection
    , Reflex.OpenLayers.Projection
    , Reflex.OpenLayers.Util
  ghc-prof-options: -fprof-auto
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  if flag(include-javascript)
    js-sources: static/ol.js
  default-language: Haskell2010

executable reflex-openlayers-demo
  hs-source-dirs: exe
  main-is: demo.hs
  build-depends:
      base
    , lens
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , data-default
    , reflex-openlayers
    , containers
    , transformers
    , file-embed
    , safe
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
  if !flag(examples)
    Buildable: False
  if flag(examples) && !flag(include-javascript)
    js-sources: static/ol.js
  --cpp-options: -DGHCJS_TRACE_WEAK
